# api/src/main/java/com/dfth2020/controller/HelloWorldController.java
@@ -1,18 +1,14 @@
 package com.dfth2020.controller;
 
-import com.dfth2020.server.api.HelloApi;
-import com.dfth2020.server.model.HelloWorld;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
+import org.springframework.web.bind.annotation.GetMapping;
 
 @Controller
-public class HelloWorldController implements HelloApi {
+public class HelloWorldController {
 
-    @Override
-    public ResponseEntity<HelloWorld> helloWorldGet() {
-        HelloWorld helloWorld = new HelloWorld();
-        helloWorld.setHello("world");
-
-        return ResponseEntity.ok(helloWorld);
+    @GetMapping("/hello/world")
+    public ResponseEntity<String> helloWorldGet() {
+        return ResponseEntity.ok("hello world");
     }
 }
